# tele-notifier

./: .env  pyproject.toml
tele_notifier/: main.py
